# MultiQC_CMGG

./: .gitignore  Dockerfile  README.md  USAGE.md  pyproject.toml
.github/workflows/: build-docker.yaml  linux.yaml  upload_pypi.yaml
Dev/: pyproject.toml
Dev /: pyproject.toml
Dev/multiqc_cmgg/templates/: __init__.py  base.html  footer.html  header.html
docs/configs/: multiqc_config_additional_options.yaml  multiqc_config_msisensorpro.yaml  multiqc_config_targeted_MSH2.yaml
docs/examples/: targeted_MSH2_report.html
multiqc_cmgg/: multiqc_cmgg.py
multiqc_cmgg/modules/MSH2_hotspot_varcount/: MSH2_hotspot_varcount.py  __init__.py
multiqc_cmgg/modules/coverage/: __init__.py  coverage.py
multiqc_cmgg/modules/msi_sensor_pro/: __init__.py  msi_sensor_pro.py
multiqc_cmgg/modules/sample_gender/: __init__.py  sample_gender.py
multiqc_cmgg/modules/targeted_MSH2/: __init__.py  targeted_MSH2.py
multiqc_cmgg/templates/cmgg/: __init__.py  base.html  header.html
