[project]
name = "multiqc_cmgg"
dynamic = ["version"]
description = "MultiQC plugin for interal use at CMGG"
readme = "README.md"
authors = [
    {name = "Matthias De Smet" , email= "11850640+matthdsm@users.noreply.github.com"}
]
license = "MIT"
keywords = ["bioinformatics", "biology", "sequencing", "NGS", "next generation sequencing", "quality control"]

# Avoid cPython bug in 3.14.1 - https://github.com/python/cpython/issues/142214
requires-python = ">=3.13, !=3.14.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "multiqc>=1.33"
]
[build-system]
requires = ["setuptools","multiqc"]
build-backend = "setuptools.build_meta"

[project.entry-points."multiqc.templates.v1"]
cmgg = "multiqc_cmgg.templates.cmgg"

[project.entry-points."multiqc.modules.v1"]
sample_gender = "multiqc_cmgg.modules.sample_gender.sample_gender:MultiqcModule"
coverage = "multiqc_cmgg.modules.coverage.coverage:MultiqcModule"
targeted_MSH2 = "multiqc_cmgg.modules.targeted_MSH2.targeted_MSH2:MultiqcModule"
msi_sensor_pro = "multiqc_cmgg.modules.msi_sensor_pro.msi_sensor_pro:MultiqcModule"

[project.entry-points."multiqc.hooks.v1"]
execution_start = "multiqc_cmgg.multiqc_cmgg:plugin_execution_start"

[tool.setuptools.packages.find]
where = ["."]
include = ["multiqc_cmgg*"]

[tool.setuptools.dynamic]
version = {attr = "multiqc_cmgg.__version__"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"multiqc_cmgg" = ["templates/**/*","*"]

[tool.pixi.workspace]
channels = ["conda-forge","bioconda"]
platforms = ["osx-arm64","linux-64"]

[tool.pixi.feature.dev.pypi-dependencies]
multiqc_cmgg = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]

[tool.pixi.environments]
default = ["dev"]
prod = []

[tool.pixi.tasks]

[tool.pixi.dependencies]
multiqc = ">=1.33,<2"
