[project.entry-points."multiqc.modules.v1"]
picard_demultiplex = "multiqc_cmgg.modules.picard_demultiplex.demultiplex:MultiqcModule"

[project.entry-points."multiqc.hooks.v1"]
config_loaded = "multiqc_cmgg.multiqc_cmgg:update_config"

[project.entry-points."multiqc.templates.v1"]
cmgg_template = "multiqc_cmgg.templates.cmgg"
